[package]
name = "portal-checker"
version = "0.0.1"
authors = ["red <red.avtovo@gmail.com>"]
edition = "2021"
repository = "https://github.com/j0rsa/portal-checker"
license = "MIT"
readme = "README.md"
description = "A tool that periodically checks a web portal and reports ist status to a status bar"
build = "build.rs"

[dependencies]
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.22",features = ["rustls-tls"] }
tray-item = "0.9.0"

[build-dependencies]
embed-resource = "2.3"
